--- a/Movable Words/Base.lproj/Main.storyboard
+++ b/Movable Words/Base.lproj/Main.storyboard
@@ -17,16 +17,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Nng-ld-oaV">
-                                <rect key="frame" x="16" y="54.000000000000014" width="343" height="238.33333333333337"/>
+                                <rect key="frame" x="16" y="172.33333333333334" width="343" height="106.00000000000003"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Введите строку" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fF9-XW-TmN">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="180.33333333333334"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="48"/>
                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AEl-kh-8VV">
-                                        <rect key="frame" x="0.0" y="188.33333333333334" width="343" height="50"/>
+                                        <rect key="frame" x="0.0" y="56" width="343" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="12w-XV-at0"/>
                                         </constraints>
@@ -36,16 +36,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Zni-FI-dQQ">
-                                <rect key="frame" x="86.666666666666686" y="308.33333333333331" width="202" height="205.66666666666669"/>
+                                <rect key="frame" x="86.666666666666686" y="328.33333333333331" width="202" height="165.66666666666669"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Перенести строку " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PZW-Hp-L1q">
-                                        <rect key="frame" x="0.0" y="0.0" width="202" height="37"/>
-                                        <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="23"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Перенести строку " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PZW-Hp-L1q">
+                                        <rect key="frame" x="0.0" y="0.0" width="202" height="35.333333333333336"/>
+                                        <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="42" translatesAutoresizingMaskIntoConstraints="NO" id="4Ls-gK-Q27">
-                                        <rect key="frame" x="0.0" y="37" width="202" height="95"/>
+                                        <rect key="frame" x="0.0" y="35.333333333333371" width="202" height="95"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="u7u-GV-44A">
                                                 <rect key="frame" x="0.0" y="0.0" width="80" height="95"/>
@@ -89,9 +89,9 @@
                                             </stackView>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="слов в начало строки" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lh7-IW-ovI">
-                                        <rect key="frame" x="0.0" y="132" width="202" height="73.666666666666686"/>
-                                        <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="23"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="слов в начало строки" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lh7-IW-ovI">
+                                        <rect key="frame" x="0.0" y="130.33333333333337" width="202" height="35.333333333333343"/>
+                                        <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -101,13 +101,60 @@
                         <viewLayoutGuide key="safeArea" id="lVG-de-adz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Nng-ld-oaV" firstAttribute="top" relation="lessThanOrEqual" secondItem="lVG-de-adz" secondAttribute="top" constant="10" id="18F-ih-qSt"/>
                             <constraint firstItem="Zni-FI-dQQ" firstAttribute="centerY" secondItem="lVG-de-adz" secondAttribute="centerY" id="3X1-rO-sBR"/>
                             <constraint firstItem="lVG-de-adz" firstAttribute="trailing" secondItem="Nng-ld-oaV" secondAttribute="trailing" constant="16" id="3lu-qQ-UaD"/>
-                            <constraint firstItem="Zni-FI-dQQ" firstAttribute="top" relation="lessThanOrEqual" secondItem="Nng-ld-oaV" secondAttribute="bottom" constant="16" id="L19-TB-SXw"/>
+                            <constraint firstItem="Zni-FI-dQQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Nng-ld-oaV" secondAttribute="bottom" constant="40" id="9IX-oj-xR5"/>
+                            <constraint firstItem="Zni-FI-dQQ" firstAttribute="top" secondItem="Nng-ld-oaV" secondAttribute="bottom" constant="100" id="BKZ-DZ-fSr"/>
+                            <constraint firstItem="lVG-de-adz" firstAttribute="bottom" secondItem="Zni-FI-dQQ" secondAttribute="bottom" constant="32" id="N3u-fm-IIZ"/>
                             <constraint firstItem="Zni-FI-dQQ" firstAttribute="centerX" secondItem="lVG-de-adz" secondAttribute="centerX" id="iD8-9J-u0s"/>
                             <constraint firstItem="Nng-ld-oaV" firstAttribute="leading" secondItem="lVG-de-adz" secondAttribute="leading" constant="16" id="nxC-Dm-rvl"/>
+                            <constraint firstItem="lVG-de-adz" firstAttribute="bottom" secondItem="Zni-FI-dQQ" secondAttribute="bottom" constant="16" id="oOK-aw-lDZ"/>
+                            <constraint firstItem="Nng-ld-oaV" firstAttribute="top" secondItem="lVG-de-adz" secondAttribute="top" constant="32" id="pxv-fk-4vu"/>
+                            <constraint firstItem="Zni-FI-dQQ" firstAttribute="top" secondItem="Nng-ld-oaV" secondAttribute="bottom" constant="50" id="tVq-2z-9b7"/>
+                            <constraint firstItem="Nng-ld-oaV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="lVG-de-adz" secondAttribute="top" constant="100" id="vSo-rm-wH5"/>
+                            <constraint firstItem="Zni-FI-dQQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Nng-ld-oaV" secondAttribute="bottom" constant="16" id="xYE-kU-lFd"/>
+                            <constraint firstItem="Nng-ld-oaV" firstAttribute="top" secondItem="lVG-de-adz" secondAttribute="top" constant="16" id="xxx-Dd-rSt"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="N3u-fm-IIZ"/>
+                                <exclude reference="oOK-aw-lDZ"/>
+                                <exclude reference="pxv-fk-4vu"/>
+                                <exclude reference="vSo-rm-wH5"/>
+                                <exclude reference="xxx-Dd-rSt"/>
+                                <exclude reference="9IX-oj-xR5"/>
+                                <exclude reference="BKZ-DZ-fSr"/>
+                                <exclude reference="tVq-2z-9b7"/>
+                                <exclude reference="xYE-kU-lFd"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="oOK-aw-lDZ"/>
+                                <include reference="xxx-Dd-rSt"/>
+                                <exclude reference="3X1-rO-sBR"/>
+                                <include reference="xYE-kU-lFd"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=regular">
+                            <mask key="constraints">
+                                <include reference="N3u-fm-IIZ"/>
+                                <include reference="pxv-fk-4vu"/>
+                                <exclude reference="3X1-rO-sBR"/>
+                                <include reference="9IX-oj-xR5"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="tVq-2z-9b7"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <mask key="constraints">
+                                <include reference="vSo-rm-wH5"/>
+                                <include reference="BKZ-DZ-fSr"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rbm-i5-8Cu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
